@startuml ServerDb

' skinparam linetype ortho

' hide circle

entity "Device" as device {
    * identifier : bytea
    --
    device_name: varchar
    last_active: bigint
}

entity "Group Participant" as group_pariticipant {
    * id : integer <<generated>>
    --
    device_id: bytea
    group_id: bytea
}

entity "SigningGroup" as group {
    * identifier: bytea
    --
    group_name: varchar
    threshold: integer

}

enum "ProtocolType" as protocol_type {
    GG18
}


entity "Task" as task {
    * id: integer <<generated>>
    --
    round: integer
    error_message: varchar
}

enum "TaskType" as task_type {
    Group
    Sign

}

enum "TaskState" as stask_state {
    Created
    Running
    Finished
    Failed
}

entity "TaskResult" as task_result {
    * id: integer <<generated>>
    --
    signed_data: bytea
}

enum "TaskResultType" as task_result_type {
    GroupEstablished
    Signed
}

group ||..o{ group_pariticipant: < participates in
group_pariticipant }o..|| device: < is a participant
group }o..|| protocol_type: > is of type
task }o..|| task_type: > is of type
group ||..o{ task: > contains
task }o..|| stask_state: > is in state
task_result }o..o| group : > group established
task_result }o..|| task_result_type: > is of type


@enduml
